@@ -17,16 +17,14 @@ package org.instancio.internal.nodes;
 
 import org.instancio.exception.InstancioException;
 import org.instancio.internal.context.ModelContext;
-import org.instancio.internal.util.ErrorMessageUtils;
 import org.instancio.internal.util.Fail;
 import org.instancio.internal.util.ObjectUtils;
 import org.instancio.internal.util.ReflectionUtils;
 import org.instancio.internal.util.TypeUtils;
 import org.instancio.settings.Keys;
 import org.instancio.settings.OnMaxDepthReached;
+import org.instancio.support.Log;
 import org.jetbrains.annotations.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.GenericArrayType;
@@ -37,16 +35,16 @@ import java.lang.reflect.TypeVariable;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
+
+import static org.instancio.internal.util.ErrorMessageUtils.maxDepthReached;
 
 /**
  * Class for creating a node hierarchy for a given {@link Type}.
  */
 public final class NodeFactory {
-    private static final Logger LOG = LoggerFactory.getLogger(NodeFactory.class);
 
     private final DeclaredAndInheritedMemberCollector memberCollector;
     private final ModelContext modelContext;
@@ -98,23 +96,28 @@ public final class NodeFactory {
      * @return child nodes (without children), or an empty list if none.
      */
     @NotNull
+    @SuppressWarnings("PMD.CyclomaticComplexity")
     private List<InternalNode> createChildren(@NotNull final InternalNode node) {
         if (node.isIgnored()) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         if (node.getDepth() >= modelContext.getMaxDepth()) {
             final OnMaxDepthReached onMaxDepthReached = modelContext.getSettings()
                     .get(Keys.ON_MAX_DEPTH_REACHED);
 
-            if (onMaxDepthReached == OnMaxDepthReached.IGNORE) {
-                LOG.trace("Maximum depth ({}) reached {}", modelContext.getMaxDepth(), node);
-                return Collections.emptyList();
-            }
-            if (onMaxDepthReached == OnMaxDepthReached.FAIL) {
-                throw Fail.withUsageError(ErrorMessageUtils.maxDepthReached(
-                        node, modelContext.getMaxDepth()));
-            }
+            return switch (onMaxDepthReached) {
+                case FAIL -> throw Fail.withUsageError(maxDepthReached(node, modelContext.getMaxDepth()));
+
+                case WARN -> {
+                    Log.msg(Log.Category.ON_MAX_DEPTH_REACHED,
+                            "Maximum depth of {} reached at {}. Ignoring further child nodes.",
+                            modelContext.getMaxDepth(), node);
+
+                    yield List.of();
+                }
+                case IGNORE -> List.of();
+            };
         }
 
         final List<InternalNode> children;
@@ -123,7 +126,7 @@ public final class NodeFactory {
         if (type instanceof Class) {
             // do not reflect on JDK classes
             children = node.is(NodeKind.JDK)
-                    ? Collections.emptyList()
+                    ? List.of()
                     : createChildrenOfClass(node);
         } else if (type instanceof ParameterizedType) {
             children = createChildrenOfParameterizedType(node);
